# eds4jinja2

./: .gitignore  .importlinter  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.claude/memory/: MEMORY.md
.github/workflows/: docs.yml  main.yml  publish.yml
docs/: antora-playbook.local.yml  antora-playbook.yml  antora.yml  conf.py  index.rst
docs/srcdocs/: eds4jinja2.adapters.rst  eds4jinja2.builders.rst  eds4jinja2.entrypoints.api.rst  eds4jinja2.entrypoints.cli.rst  eds4jinja2.entrypoints.rst  eds4jinja2.models.rst  eds4jinja2.rst  eds4jinja2.services.rst  modules.rst
eds/: __init__.py
eds/adapters/: base_data_source.py  dummy_ds.py  file_ds.py  http_ds.py  sparql_ds.py
eds/builders/: __init__.py  jinja_builder.py  report_builder.py
eds4jinja2/: __init__.py  configuration.py  main.py  output.html
eds4jinja2/adapters/: __init__.py  base_data_source.py  file_ds.py  graph_store.py  http_ds.py  in_memory_sparql_ds.py  latex_utils.py  local_sparql_ds.py  namespace_handler.py  prefix_cc_fetcher.py  query_files.py  remote_sparql_ds.py  sparql_ds.py  sparql_query.py  sparql_results.py  substitution_template.py  tabular_utils.py
eds4jinja2/builders/: __init__.py  jinja_builder.py  parallel_executor.py  report_builder.py  report_builder_actions.py
eds4jinja2/models/: collections.py  data_source.py  sparql.py  transformations.py
eds4jinja2/services/: __init__.py  jinja_builder.py  parallel_executor.py  report_builder.py  report_builder_actions.py
openspec/: config.yaml
openspec/changes/: README.md
openspec/specs/: README.md
poc/: __init__.py  test_extension.py
rdf_report_templates/: __init__.py
templates/: TODO.md
templates/diff/: TODO.md  config.json
templates/itb-shacl-report/: config.json
templates/rdfunit-shacl-report/: config.json
tests/: __init__.py
tests/features/: cli.feature  eds_in_template.feature  file_ds.feature  sparql_ds.feature
tests/steps/: __init__.py  conftest.py  test_cli.py  test_eds_in_template.py  test_file_ds.py  test_sparql_ds.py
tests/test_data/: file.binary  file.csv  file.json  file.xls  file.xlsx  file.yaml  shacl.example.shapes.ttl
tests/unit/: conftest.py  conftext.py  test_file_ds.py  test_graph_store.py  test_in_memory_builders.py  test_in_memory_sparql_ds.py  test_jinja_builder.py  test_lambdas.py  test_latex_utils.py  test_local_sparql_ds.py  test_namespace_handlers.py  test_parallel_executor.py  test_report_builder.py  test_report_builder_injection.py  test_report_builder_parallel.py  test_sparql_ds.py  test_sparql_results.py  test_tabular_utils.py  test_top_imports.py  (+1 more)
(+159 files in other folders)
